[build-system]
requires      = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Simon van Lierde", email = "simonvanlierde@gmail.com" },
    { name = "Johanna Holsten", email = "j.holsten@tu-braunschweig.de" },
]
name = "batterway"
maintainers = [{ name = "Simon van Lierde", email = "simonvanlierde@gmail.com" }]
description = "Batterway LCA models for Depart de Sentier vocabularies"
readme = "README.md"
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "chempy",
    "pandas",
    "sentier_data_tools"
]

[tool.uv]
# sentier_data_tools (via playhouse.sqlite_ext) is incompatible with peewee >= 4,
# which dropped/relocated SqliteExtDatabase. Constrain the transitive dependency.
constraint-dependencies = ["peewee<4"]

[project.urls]
source   = "https://github.com/simonvanlierde/batterway"
homepage = "https://github.com/simonvanlierde/batterway"
tracker  = "https://github.com/simonvanlierde/batterway/issues"

[project.optional-dependencies]
# Getting recursive dependencies to work is a pain, this
# seems to work, at least for now
testing = ["batterway", "pytest", "pytest-cov", "python-coveralls"]
dev     = ["build", "pre-commit", "pylint", "pytest", "pytest-cov", "pytest-randomly", "setuptools"]

[tool.setuptools]
license-files        = ["LICENSE"]
include-package-data = true
packages             = ["batterway"]

[tool.setuptools.dynamic]
version = { attr = "batterway.__version__" }

[tool.pytest.ini_options]
addopts       = "--cov batterway --cov-report term-missing --verbose"
norecursedirs = [".tox", "build", "dist"]
testpaths     = ["tests/*.py"]

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore   = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [".eggs", ".tox", "build", "dist", "docs/conf.py"]

[tool.black]
line-length = 88

[tool.isort]
profile                        = "black"
line_length                    = 88
multi_line_output              = 3
include_trailing_comma         = true
force_grid_wrap                = 0
use_parentheses                = true
ensure_newline_before_comments = true
